<resources>
    <string name="app_name">Engage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="FirstLastName"><![CDATA[First & Last Name]]></string>
    <string name="FunctionLocation">Function, Location</string>
    <string name="role">Role</string>
    <string name="rolelbl">Rotation Title:</string>
    <string name="assignleader">AssignmentLeader</string>
    <string name="alLbl">Assignment Leader:</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="add">Add to Calendar</string>
    <string name="university">University:</string>
    <string name="NewsfeedHeading">Check out what\'s new with Synchrony Financial:</string>
</resources>
