<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/header"
            android:gravity="center"
            android:background="#3B3C43">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                app:civ_border_width="1dp"
                app:civ_border_color="#FBC600"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FirstLastName"
                android:id="@+id/txtFirstLastName"
                android:layout_marginTop="5dp"
                android:editable="false"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textColor="#fff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/FunctionLocation"
                android:id="@+id/txtFunctionLocation"
                android:textColor="#94969A"
                android:layout_marginBottom="15dp"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/rolelbl"
                android:id="@+id/txtRoleLbl"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/role"
                android:id="@+id/txtRole"
                android:layout_below="@+id/txtRoleLbl"
                android:layout_alignParentStart="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/alLbl"
                android:id="@+id/txtALLbl"
                android:layout_below="@+id/txtRole"
                android:layout_alignParentStart="true"
                android:layout_marginTop="43dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/assignleader"
                android:id="@+id/txtAL"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtALLbl"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="University"
                android:id="@+id/txtUnivLbl"
                android:layout_below="@+id/txtAL"
                android:layout_marginTop="43dp"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="BLP's University"
                android:id="@+id/txtUniv"
                android:layout_below="@+id/txtUnivLbl"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/email"
                android:id="@+id/txtEmail"
                android:layout_below="@+id/txtUniv"
                android:layout_marginTop="43dp"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/phone"
                android:id="@+id/txtPhone"
                android:layout_below="@+id/txtEmail"
                android:layout_alignParentStart="true"/>

        </RelativeLayout>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnCall"
            style="@style/FloatingActionButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_phone"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
